--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "tree": "^0.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
